app/assets/stylesheets/layouts.css.scss
.panel{
	background-color: rgba(255,255,255,0.5);
}
h1.moussetache_header{
	z-index:1;
	&:after{
		z-index:0;
		content:"";
		background-image:asset-url("transparantMoussetache.png");
		opacity: 0.50;
		position:absolute;
		left:-10%;
		height:75px;
		width:120%;
		margin-top:-.5em;
		background-size:contain;
		background-repeat:no-repeat;
		background-position:center;
	}
	width:120%;
	margin-left:-10%;
}
.left_panel{
	text-align:center;
	background-image:asset-url("menusnor.png");
	@include panel_height(#{$header_height+$top_banner_height});
	width: 27.5%;
	.moussetache_link{
		padding-bottom:45px;
		a{
			position:relative;
			z-index:1;
		}
		&:after{
			content:"";
			position:absolute;
			width:60%;
			left:20%;
			height:3em;
			margin-top:-0.5em;
			background-image:asset-url("moussetache.png");
			background-size: contain;
			background-repeat: no-repeat;
			background-position: center;
		}
	}
}
.mid_panel{
	@include panel_height(#{$header_height+$top_banner_height});
	width: 37%;
	margin-left:4%;
	margin-right:4%;
	.main_content{
		height:100%;
		padding:15px;
	}
}
.right_panel{
	@include panel_height(#{$header_height+$top_banner_height});
	background-image:asset-url("contactsnor.png");
	width: 27.5%;
}

.container{
	height:100%;
	@media screen and (max-width: $desktop){
		width:calc(#{$desktop}*0.75);
	}
	@media screen and (max-width: $tablet){
		width:calc(#{$tablet}*0.75);
	}
	@media screen and (max-width: $mobile){
		width:calc(#{$mobile}*0.75);
	}
}
body{
	background:image-asset-url("background.jpg");
	background-size: cover;
	height:100%;
}
html{
	height:100%;
}
.row{
	z-index:0;
}

